Fix tweet text area scrolling by fixing css overflow property

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -26,7 +26,6 @@ main section.new-tweet form label{
 }
 
 main section.new-tweet form textarea {
-  overflow: hidden;
   border: none;
   outline: none;
   resize: none;
